<resources>
    <string name="app_name">RidetoUPQ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="layoutBC">Bienvenido Comunidad</string>
    <string name="ingresaro_como">Ingresaro como:</string>
    <string name="usuario">Usuario</string>
    <string name="conductor">Conductor</string>
    <string name="basura">u</string>
    <string name="avanzar">avanzar</string>
    <string name="ingrese_el_curp">Ingrese el curp</string>
    <string name="curp">CURP</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_paterno_campo">Apellido paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="apellido_materno_campo">Apellido Materno</string>
    <string name="ingresa_tu_correo">Ingresa tu correo</string>
    <string name="correo">Correo</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="continuar">Continuar</string>
    <string name="input_placa">Ingresa la placa</string>
    <string name="placa">Placa</string>
    <string name="input_color">Ingresa el color</string>
    <string name="model_auto">Modelo del Auto</string>
    <string name="CarLicense">Tarjeta de circulación</string>
    <string name="link">Link</string>
    <string name="Continue">Continuar</string>
    <string name="back">Regresar</string>
</resources>
