<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="109dp"
        android:layout_weight="0.07"
        app:srcCompat="@mipmap/logo"
        android:contentDescription="RidetoUPQ" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:text="@string/layoutBC"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.14"
        android:text="@string/ingresaro_como"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:text="@string/usuario"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/basura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
        android:text="@string/basura"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btnConductor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:text="@string/conductor"
        android:textAlignment="center" />
</LinearLayout>